--- a/index.Rmd
+++ b/index.Rmd
@@ -1,17 +1,17 @@
 ---
-title: "Evelia Coss"
-image: "yo_azul.jpg"
+title: "Diana Barrientos"
+image: "foto.jpeg"
 links:
-  - label: '`r fontawesome::fa(name = "linkedin", fill = "steelblue")` LinkedIn'
-    url: "https://www.linkedin.com/in/evelia-lorena-coss-navarrete-562226229/"
-  - label: '`r fontawesome::fa(name = "twitter", fill = "steelblue")` Twitter'
-    url: "https://twitter.com/EveliaCoss/"
-  - label: '`r fontawesome::fa(name = "github", fill = "steelblue")` Github'
-    url: "https://github.com/EveliaCoss/"
-  - label: '`r fontawesome::fa(name = "envelope", fill = "steelblue")` Mail'
-    url: "mailto:ecoss@liigh.unam.mx"
-  - label: '`r fontawesome::fa(name = "user", fill = "steelblue")` CV'
-    url: "https://eveliacoss.github.io/CV/cv_ECoss.html"
+  - label: '`r fontawesome::fa(name = "linkedin", fill = "darkred")` LinkedIn'
+    url: "https://www.linkedin.com/in/diana-barrientos-gonz%C3%A1lez-03a70536a"
+  - label: '`r fontawesome::fa(name = "x-twitter", fill = "darkred")` x-twitter'
+    url: "https://x.com/diana_bglz?s=11"
+  - label: '`r fontawesome::fa(name = "github", fill = "darkred")` Github'
+    url: "https://github.com/dianabarrientoss"
+  - label: '`r fontawesome::fa(name = "envelope", fill = "darkred")` Mail'
+    url: "diana.barrientos.glz@gmail.com"
+  - label: '`r fontawesome::fa(name = "bluesky", fill = "darkred")` bluesky'
+    url: "https://bsky.app/profile/dianabarrientos.bsky.social"
 output:
   postcards::jolla
 ---
@@ -22,23 +22,15 @@ library(fontawesome)
 
 #### **Bio** 
 
-I am interested in gene regulation, lncRNAs, autoimmune disease, evolution and bioinformatics.
+I am interested in epigenetic regulatory networks, cancer biology, mathematical modelling and bioinformatics.
 
-Founding member of VieRnes de Bioinformatica en el LIIGH (bioinformatics fridays at @[LIIGH-UNAM](https://twitter.com/LIIGH_UNAM)) | web page: https://viernesbioinformatica.github.io/ | Github: [ViernesBioinfo2024](https://github.com/EveliaCoss/ViernesBioinfo2024) and [ViernesBioinfo2023](https://github.com/EveliaCoss/ViernesBioinfo2023)
 
 #### **Education**
-
-**Postdoctoral Fellowship** | @[LIIGH-UNAM](https://twitter.com/LIIGH_UNAM) | Dr. @[Alejandra Medina-Rivera](https://twitter.com/AleMedinaRivera) | February 2023 - Present
-
-**PhD in Plant Biotechnology** | @[Cinvestav UGA-Langebio](https://twitter.com/uga_langebio), Mexico | Dr. @[Selene Fernandez-Valverde](https://twitter.com/SelFdz) | August 2018 - January 2023
+Genomic Sciences Undergraduate | UNAM
+ Internship | @[LIIGH-UNAM](https://twitter.com/LIIGH_UNAM), México | Dr. Mariana Gómez Schiavon| February 2025 - Present
+Internship| @[LIIGH-UNAM](https://twitter.com/LIIGH_UNAM), Mexico | Dr. Carla Daniela Robles Espinoza | June 2025 - Present
 
 #### **Experience**
 
-Member of the @[JAGUAR Project](https://twitter.com/PJaguarLATAM), @[R-ladies Morelia](https://www.facebook.com/profile.php?id=100093337606435), @[RIABIO](https://twitter.com/RiaBioNet), @[LupusRGMX](https://lupusrgmx.liigh.unam.mx/quienes-somos.html), @[CDSB Mexico](https://twitter.com/CDSBMexico) and @[ISCB RSG-Mexico](https://x.com/rsg_iscb_mexico?lang=es).
-
-Repository Contributions: 
-
-Webpage [Plants&Python](https://plantsandpython.github.io/PlantsAndPython/00_Opening_page.html) | Github [Plants&Python](https://github.com/PlantsAndPython/PlantsAndPython) | Dr. Daniel H. Chitwood, Dr. Robert VanBuren and Alejandra Rougon-Cardoso
-
-[Transcriptome-guided annotation and functional classification of long non-coding RNAs in Arabidopsis thaliana](https://pubmed.ncbi.nlm.nih.gov/35982083/) | Github [Transcriptome-guided_lncRNA_annotation](https://github.com/RegRNALab/Transcriptome-guided_lncRNA_annotation) | Dr. @[Selene Fernandez-Valverde](https://twitter.com/SelFdz)
+Member of the 5thSummerSchool at  @[LIIGH-UNAM](https://twitter.com/LIIGH_UNAM)
 
